plugins {
    id 'com.android.library'
}

android {
    compileSdk 32
    buildToolsVersion '32.0.0'

    defaultConfig {
        minSdk 24
        targetSdkVersion 32
        versionCode 22070201
        versionName '0.1'
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    signingConfigs {
        config {
            v1SigningEnabled true
            v2SigningEnabled true
            enableV3Signing true
            enableV4Signing true
        }
    }
    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }


    /** 打包成jar**/
    task makeJar(type: Jar) {
        classifier = 'sources'
        from android.sourceSets.main.java.sourceFiles
    }
    makeJar.dependsOn(build)

}
repositories {
    mavenLocal()
    jcenter()
    google()
    mavenCentral()
}
dependencies {
    //implementation 'androidx.core:core-ktx:1.7.0'
    //implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.code.gson:gson:2.9.1'//Gson
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'com.squareup.okio:okio:3.2.0'
    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.8'//OkHttp3
    implementation 'com.sun.mail:android-mail:1.6.7'//邮件
    implementation 'com.sun.mail:android-activation:1.6.7'
    compileOnly "de.robv.android.xposed:api:82"
    compileOnly 'de.robv.android.xposed:api:82:sources'
    implementation project(path: ':libs-java')

}